--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         </button>
 
         <br><br>
-        <img src="D:\ClipScreen\ElectronJS.png" alt="Electron logo">
+        <img src="../ElectronJS.png" alt="Electron logo">
 
         <br><br>
         <button id="copyImage">Copy&Paste Image</button>
@@ -35,6 +35,6 @@
         <button id="style">Change Theme of Page</button>
         <button id="clear">Revert to Original</button>
         
-        <script src="index.js"></script>
+        <script type="commonjs" src="index.js"></script>
     </body>
 </html>
