--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         <button id="style">Change Theme of Page</button>
         <button id="clear">Revert to Original</button>
         
-        <script type="commonjs" src="index.js"></script>
+        <script type="module" src="index.js" defer></script>
 
     </body>
 </html>
